# gemini-storyboard

./: .gitignore  ARCHITECTURE.md  CINEMATIC_UPGRADE_PLAN.md  IMPLEMENTATION_PLAN.md  README.md  STYLE_GUIDE.md  dashboard.html  dashboard.py  engine_elevenlabs.py  master_prompt.txt  pyproject.toml  render_overlay.py  scenes.tsv  start.sh  whisper_transcribe.py
.claude/: launch.json
.github/workflows/: lint.yml
.kilo/plans/: 1783367382459-quickwin-elevenlabs.md
assets/: CREDITS.txt
docs/: 80-schwachstellen-tracker.md  Architekturanalyse und Schwachstellenbericht — Storyboard Generator V2.md  PROMPT_PIPELINE.md  RUNBOOK.md  bug-b1-report.md  bug-char-mull-injection-report.md  diagnose-char-konsistenz-2026-07-09.md  phase-X-report.md  phase-m-report.md  phase-status-audit.md
engine/: __init__.py  audio.py  imagegen.py  presets.py  prompts.py  render.py  scenes.py
legacy/: STYLE_GUIDE.md  gen.py  run_batch.sh
routes/: __init__.py
scripts/: lint.sh  test_thinking_levels.py
tests/: test_cinematic_e2e.py  test_pipeline_fixes.py
